<resources>
    <string name="app_name">Yegara</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">www.yegara.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Domain Search</string>
    <string name="menu_gallery">My Orders</string>
    <string name="menu_slideshow">My Domains</string>
    <string name="menu_Resources">Resources</string>
    <string name="menu_visit">Visit Vegara HOST</string>
    <string name="menu_chat">Chat : Online</string>
</resources>